feat(shooting): fire critical arrows, toggleable via critical-arrows config
Arrows now carry the crit flag (vanilla x1.5 multiplier + crit particles).
Enabled by default; set shooting.critical-arrows: false to disable.
Also makes Soul Eater's consumption path reachable, since every arrow
hit now counts as a critical hit.

fix(soul-eater): release stored strength correctly and stop compounding

- Re-check for a killing blow after the stored bonus is applied, so a
  crit that only kills because of Soul Eater still stores new power.
- Snapshot the blow's own damage before the bonus is added; storing the
  boosted value made stored power grow ~10x per kill.
- Treat crit-flagged arrows as critical hits, not just melee crits.

fix(salvation): reject self-hits from falling arrows

Arrows fired straight up land on the shooter and charged Salvation
(and dealt damage). Self-hits are now ignored, and a new handler
cancels damage a Terminator arrow deals to its own shooter - which
also prevents stored Soul Eater power from discharging onto the
player's own head.

fix(salvation): build action-bar tiers from hits-required

The T1/T2/T3! text was hard-coded and showed wrong tiers for any
salvation.hits-required other than 3.

fix(shooting): don't co-fire arrows with the beam on one click

A left click on an entity can arrive as PrePlayerAttackEntityEvent
plus a swing packet in the same tick; the beam path now consumes the
shoot cooldown. Also reject a second shot in the same millisecond
(guard for shoot-cooldown-ms: 0 with a bow in both hands).

refactor: deduplicate beam charge/cooldown checks and clean up ray-tracing

Merges canFireBeam into tryFireBeam, hoists the DustOptions allocation
out of the particle loop, replaces the hand-rolled box expansion with
BoundingBox#expand, and simplifies target sorting and the clamp math.

refactor(config): restructure config reading

Removes Logger threading through every reader, gives bool() a path and
default like the other readers, and dr