@@ -19,24 +19,14 @@ import org.bukkit.util.RayTraceResult;
 import org.bukkit.util.Vector;
 
 import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 
 public final class SalvationBeamAbility {
 
     private static final int MAX_PARTICLES = 256;
     private static final double LAVA_DENSITY_FACTOR = 0.75;
-
-    private static final Component AB_T1;
-    private static final Component AB_T2;
-    private static final Component AB_T3;
-    static {
-        MiniMessage mm = MiniMessage.miniMessage();
-        AB_T1 = mm.deserialize("<dark_gray>Salvation: <yellow>T1").decoration(TextDecoration.ITALIC, false);
-        AB_T2 = mm.deserialize("<dark_gray>Salvation: <gold>T2").decoration(TextDecoration.ITALIC, false);
-        AB_T3 = mm.deserialize("<dark_gray>Salvation: <light_purple><bold>T3!").decoration(TextDecoration.ITALIC, false);
-    }
+    private static final MiniMessage MM = MiniMessage.miniMessage();
 
     private final TerminatorConfig config;
 
@@ -50,38 +40,42 @@ public final class SalvationBeamAbility {
     }
 
     public void onArrowHit(Player shooter) {
-        int id = shooter.getEntityId();
-        int current = hitCounter.get(id);
-        if (current >= config.salvationHitsRequired) return;
+        int hits = hitCounter.get(shooter.getEntityId());
+        if (hits >= config.salvationHitsRequired) return;
 
-        int next = current + 1;
-        hitCounter.put(id, next);
-
-        Component message = switch (next) {
-            case 1 -> AB_T1;
-            case 2 -> AB_T2;
-            default -> AB_T3;
-        };
-        shooter.sendActionBar(message);
+        hits++;
+        hitCounter.put(shooter.getEntityId(), hits);
+        shooter.sendActionBar(progressMessage(hits));
     }
 
-    public void tryFireBeam(Player player) {
+    public boolean tryFireBeam(Player player) {
         int id = player.getEntityId();
-        if (hitCounter.get(id) < config.salvationHitsRequired) return;
-
         long now = System.currentTimeMillis();
-        if (now - beamCooldown.get(id) < config.beamCooldownMs) return;
+
+        if (hitCounter.get(id) < config.salvationHitsRequired || now - beamCooldown.get(id) < config.beamCooldownMs) {
+            return false;
+        }
 
         beamCooldown.put(id, now);
         hitCounter.put(id, 0);
         fireSalvationBeam(player);
+        return true;
     }
 
-    public boolean canFireBeam(Player player) {
+    public void onQuit(Player player) {
         int id = player.getEntityId();
-        long now = System.currentTimeMillis();
-        return hitCounter.get(id) >= config.salvationHitsRequired
-                && (now - beamCooldown.get(id)) >= config.beamCooldownMs;
+        hitCounter.remove(id);
+        beamCooldown.remove(id);
+    }
+
+    public void cleanup() {
+        hitCounter.clear();
+        beamCooldown.clear();
+    }
+
+    private Component progressMessage(int hits) {
+        String tier = hits >= config.salvationHitsRequired ? "<light_purple><bold>T" + hits + "!" : (hits == 1 ? "<yellow>T" : "<gold>T") + hits;
+        return MM.deserialize("<dark_gray>Salvation: " + tier).decoration(TextDecoration.ITALIC, false);
     }
 
     private void fireSalvationBeam(Player player) {
@@ -94,161 +88,72 @@ public final class SalvationBeamAbility {
         double raySize = Math.max(0.0, config.beamRaySize);
         int maxPierce = Math.max(0, config.beamMaxPierce);
 
-        RayTraceResult blockHit = world.rayTraceBlocks(
-                eye, direction, maxDistance, FluidCollisionMode.NEVER, false
-        );
-
-        double limit = (blockHit != null)
-                ? origin.distance(blockHit.getHitPosition())
-                : maxDistance;
+        RayTraceResult blockHit = world.rayTraceBlocks(eye, direction, maxDistance, FluidCollisionMode.NEVER, false);
+        double limit = blockHit != null ? origin.distance(blockHit.getHitPosition()) : maxDistance;
 
         spawnLavaTrail(world, origin, direction, limit);
 
-        List<LivingEntity> targets = findBeamTargets(
-                world, eye, origin, direction, limit, raySize, maxPierce, player
-        );
-
-        for (LivingEntity target : targets) {
-            int oldMaxNoDamageTicks = target.getMaximumNoDamageTicks();
-
-            target.setMaximumNoDamageTicks(0);
-            target.setNoDamageTicks(0);
-            target.damage(config.beamDamage, player);
-            target.setMaximumNoDamageTicks(oldMaxNoDamageTicks);
+        for (LivingEntity target : findBeamTargets(world, eye, origin, direction, limit, raySize, maxPierce, player)) {
+            dealBeamDamage(target, player);
         }
     }
 
-    private List<LivingEntity> findBeamTargets(
-            World world,
-            Location eye,
-            Vector origin,
-            Vector direction,
-            double limit,
-            double raySize,
-            int maxPierce,
-            Player player
-    ) {
+    private void dealBeamDamage(LivingEntity target, Player player) {
+        int previousMaxNoDamageTicks = target.getMaximumNoDamageTicks();
+        try {
+            target.setMaximumNoDamageTicks(0);
+            target.setNoDamageTicks(0);
+            target.damage(config.beamDamage, player);
+        } finally {
+            target.setMaximumNoDamageTicks(previousMaxNoDamageTicks);
+        }
+    }
+
+    private List<LivingEntity> findBeamTargets(World world, Location eye, Vector origin, Vector direction,
+                                               double limit, double raySize, int maxPierce, Player player) {
         if (limit <= 0.0 || maxPierce <= 0) {
-            return Collections.emptyList();
+            return List.of();
         }
 
         Vector end = direction.clone().multiply(limit).add(origin);
-
         BoundingBox beamBox = new BoundingBox(
                 Math.min(origin.getX(), end.getX()) - raySize,
                 Math.min(origin.getY(), end.getY()) - raySize,
                 Math.min(origin.getZ(), end.getZ()) - raySize,
                 Math.max(origin.getX(), end.getX()) + raySize,
                 Math.max(origin.getY(), end.getY()) + raySize,
-                Math.max(origin.getZ(), end.getZ()) + raySize
-        );
-
-        Collection<Entity> nearby = world.getNearbyEntities(beamBox);
-        if (nearby.isEmpty()) {
-            return Collections.emptyList();
-        }
+                Math.max(origin.getZ(), end.getZ()) + raySize);
 
         List<LivingEntity> candidates = new ArrayList<>();
-
-        for (Entity entity : nearby) {
+        for (Entity entity : world.getNearbyEntities(beamBox)) {
             if (!(entity instanceof LivingEntity living)) continue;
-            if (living instanceof ArmorStand) continue;
-            if (living.getEntityId() == player.getEntityId()) continue;
+            if (living instanceof ArmorStand || living.getEntityId() == player.getEntityId()) continue;
 
-            BoundingBox entityBox = expandBox(living.getBoundingBox(), raySize);
-
-            if (entityBox.rayTrace(origin, direction, limit) != null) {
+            if (living.getBoundingBox().expand(raySize, raySize, raySize).rayTrace(origin, direction, limit) != null) {
                 candidates.add(living);
             }
         }
 
-        if (candidates.isEmpty()) {
-            return candidates;
-        }
-
-        Location tempLoc = new Location(world, 0, 0, 0);
-
-        candidates.sort((e1, e2) -> {
-            e1.getLocation(tempLoc);
-            double dist1 = tempLoc.distanceSquared(eye);
-
-            e2.getLocation(tempLoc);
-            double dist2 = tempLoc.distanceSquared(eye);
-
-            return Double.compare(dist1, dist2);
-        });
-
-        if (candidates.size() <= maxPierce) {
-            return candidates;
-        }
-
-        List<LivingEntity> finalTargets = new ArrayList<>(maxPierce);
-        for (int i = 0; i < maxPierce; i++) {
-            finalTargets.add(candidates.get(i));
-        }
-        return finalTargets;
-    }
-
-    private static BoundingBox expandBox(BoundingBox box, double amount) {
-        if (amount <= 0.0) return box;
-        return new BoundingBox(
-                box.getMinX() - amount,
-                box.getMinY() - amount,
-                box.getMinZ() - amount,
-                box.getMaxX() + amount,
-                box.getMaxY() + amount,
-                box.getMaxZ() + amount
-        );
+        candidates.sort(Comparator.comparingDouble(living -> living.getLocation().distanceSquared(eye)));
+        return candidates.size() <= maxPierce ? candidates : new ArrayList<>(candidates.subList(0, maxPierce));
     }
 
     private void spawnLavaTrail(World world, Vector origin, Vector direction, double length) {
         if (length <= 0.0) return;
 
-        int maxLava = Math.max(1, MAX_PARTICLES / 2);
-        int count = Math.clamp((int) (length * config.beamParticlesPerMeter * LAVA_DENSITY_FACTOR), 1, maxLava);
-        double step = length / count;
+        int maxPerType = Math.max(1, MAX_PARTICLES / 2);
+        int count = (int) Math.clamp(length * config.beamParticlesPerMeter * LAVA_DENSITY_FACTOR, 1.0, maxPerType);
+        double halfStep = length / count / 2.0;
 
-        double x = origin.getX();
-        double y = origin.getY();
-        double z = origin.getZ();
-
-        double halfDx = direction.getX() * step * 0.5;
-        double halfDy = direction.getY() * step * 0.5;
-        double halfDz = direction.getZ() * step * 0.5;
-
-        Location location = new Location(world, x, y, z);
+        Vector step = direction.clone().multiply(halfStep);
+        Location location = origin.toLocation(world);
+        Particle.DustOptions blackDust = new Particle.DustOptions(Color.BLACK, 0.5f);
 
         for (int i = 0; i < count; i++) {
             world.spawnParticle(Particle.DRIPPING_LAVA, location, 1, 0.02, 0.02, 0.02, 0.0);
-
-            x += halfDx;
-            y += halfDy;
-            z += halfDz;
-            location.setX(x);
-            location.setY(y);
-            location.setZ(z);
-
-            Particle.DustOptions blackDust = new Particle.DustOptions(Color.BLACK, 0.5f);
-
+            location.add(step);
             world.spawnParticle(Particle.DUST, location, 1, 0.02, 0.02, 0.02, 0.0, blackDust);
-
-            x += halfDx;
-            y += halfDy;
-            z += halfDz;
-            location.setX(x);
-            location.setY(y);
-            location.setZ(z);
+            location.add(step);
         }
-    }
-
-    public void onQuit(Player player) {
-        int id = player.getEntityId();
-        hitCounter.remove(id);
-        beamCooldown.remove(id);
-    }
-
-    public void cleanup() {
-        hitCounter.clear();
-        beamCooldown.clear();
     }
 }
