@@ -11,7 +11,6 @@ import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
 import org.jspecify.annotations.NonNull;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 
@@ -19,9 +18,9 @@ public final class TerminatorCommand implements BasicCommand {
 
     private static final MiniMessage MM = MiniMessage.miniMessage();
 
-    private static final Component NO_PERM = Component.text("You do not have permission to use this command.", NamedTextColor.RED);
-    private static final Component ONLY_PLAYER = Component.text("This command can only be run by a player.", NamedTextColor.RED);
-    private static final Component RELOADED = Component.text("Terminator config reloaded successfully.", NamedTextColor.GREEN);
+    private static final Component NO_PERMISSION = Component.text("You do not have permission to use this command.", NamedTextColor.RED);
+    private static final Component PLAYERS_ONLY = Component.text("This command can only be run by a player.", NamedTextColor.RED);
+    private static final Component CONFIG_RELOADED = Component.text("Terminator config reloaded successfully.", NamedTextColor.GREEN);
     private static final Component GIVEN_SELF = MM.deserialize("<green>You have received the Terminator.");
 
     private final TerminatorConfig config;
@@ -36,21 +35,26 @@ public final class TerminatorCommand implements BasicCommand {
 
     @Override
     public void execute(@NonNull CommandSourceStack source, String @NonNull [] args) {
-        CommandSender sender = source.getSender();
-
         if (reload) {
-            if (!sender.hasPermission("terminator.reload")) {
-                sender.sendMessage(NO_PERM);
-                return;
-            }
-            config.reload();
-            listener.cleanup();
-            sender.sendMessage(RELOADED);
+            reloadConfig(source.getSender());
+        } else {
+            giveBow(source.getSender(), args);
+        }
+    }
+
+    private void reloadConfig(CommandSender sender) {
+        if (!sender.hasPermission("terminator.reload")) {
+            sender.sendMessage(NO_PERMISSION);
             return;
         }
+        config.reload();
+        listener.cleanup();
+        sender.sendMessage(CONFIG_RELOADED);
+    }
 
+    private void giveBow(CommandSender sender, String[] args) {
         if (!sender.hasPermission("terminator.give")) {
-            sender.sendMessage(NO_PERM);
+            sender.sendMessage(NO_PERMISSION);
             return;
         }
 
@@ -58,38 +62,33 @@ public final class TerminatorCommand implements BasicCommand {
         if (args.length >= 1) {
             target = Bukkit.getPlayer(args[0]);
             if (target == null) {
-                sender.sendMessage(Component.text().append(Component.text("Player not found: ", NamedTextColor.RED))
-                        .append(Component.text(args[0], NamedTextColor.YELLOW)).build());
+                sender.sendMessage(Component.text("Player not found: ", NamedTextColor.RED).append(Component.text(args[0], NamedTextColor.YELLOW)));
                 return;
             }
+        } else if (sender instanceof Player self) {
+            target = self;
         } else {
-            if (!(sender instanceof Player player)) {
-                sender.sendMessage(ONLY_PLAYER);
-                return;
-            }
-            target = player;
+            sender.sendMessage(PLAYERS_ONLY);
+            return;
         }
 
         ItemStack bow = TerminatorBuilder.build(config);
-        target.getInventory().addItem(bow).forEach((_, leftover) -> target.getWorld().dropItemNaturally(target.getLocation(), leftover));
+        target.getInventory().addItem(bow).values().forEach(leftover -> target.getWorld().dropItemNaturally(target.getLocation(), leftover));
 
-        if (target.equals(sender)) {
-            target.sendMessage(GIVEN_SELF);
-        } else {
-            target.sendMessage(GIVEN_SELF);
-            sender.sendMessage(Component.text().append(Component.text("You gave a Terminator to ", NamedTextColor.GREEN))
-                    .append(Component.text(target.getName(), NamedTextColor.YELLOW)).append(Component.text(".", NamedTextColor.GREEN)).build());
+        target.sendMessage(GIVEN_SELF);
+        if (!target.equals(sender)) {
+            sender.sendMessage(Component.text("You gave a Terminator to ", NamedTextColor.GREEN).append(Component.text(target.getName(), NamedTextColor.YELLOW))
+                    .append(Component.text(".", NamedTextColor.GREEN)));
         }
     }
 
     @Override
     public @NonNull List<String> suggest(@NonNull CommandSourceStack source, String @NonNull [] args) {
-        if (reload) return Collections.emptyList();
-        if (!source.getSender().hasPermission("terminator.give")) return Collections.emptyList();
-        if (args.length == 1) {
-            String prefix = args[0].toLowerCase(Locale.ROOT);
-            return Bukkit.getOnlinePlayers().stream().map(Player::getName).filter(n -> n.toLowerCase(Locale.ROOT).startsWith(prefix)).toList();
+        if (reload || !source.getSender().hasPermission("terminator.give") || args.length != 1) {
+            return List.of();
         }
-        return Collections.emptyList();
+
+        String prefix = args[0].toLowerCase(Locale.ROOT);
+        return Bukkit.getOnlinePlayers().stream().map(Player::getName).filter(name -> name.toLowerCase(Locale.ROOT).startsWith(prefix)).toList();
     }
 }
